force-app/main/default/objects/LicenseClassification__c/LicenseClassification__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>License Classification</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>License Classifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>