force-app/main/default/objects/LicenseClassification__c/fields/ALIASModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ALIASModifiedDate__c</fullName>
    <description>PacPoint-FT041020 - Created for PVL phase 1</description>
    <label>ALIAS Modified Date</label>
    <type>Date</type>
</CustomField>