force-app/main/default/objects/LicenseClassification__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>License Classifications</relationshipLabel>
    <relationshipName>LicenseClassifications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>