force-app/main/default/objects/LicenseClassification__c/fields/ClassificationDescription__c.field-meta.xml
<CustomField>
    <fullName>ClassificationDescription__c</fullName>
    <formula>Classification__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Description</label>
    <type>Text</type>
</CustomField>