force-app/main/default/objects/LicenseClassification__c/fields/ClassificationName__c.field-meta.xml
<CustomField>
    <fullName>ClassificationName__c</fullName>
    <description>PacPoint-AZ051219 - Created for PVL phase 1.Used to display the data in the docGen function.</description>
    <formula>Classification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Name</label>
    <type>Text</type>
</CustomField>