force-app/main/default/objects/LicenseClassification__c/fields/ClassificationNameText__c.field-meta.xml
<CustomField>
    <fullName>ClassificationNameText__c</fullName>
    <description>PacPoint-FT020320 - Created for PVL phase 1.  Created so that it can be used as a criteria in a Roll-up Summary field on the License</description>
    <label>Classification Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>