force-app/main/default/objects/LicenseClassification__c/fields/EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveStartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>The date the Classification was added to the License</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>