force-app/main/default/objects/LicenseClassification__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>