force-app/main/default/objects/LicenseClassification__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>License Classifications</relationshipLabel>
    <relationshipName>LicenseClassifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>