force-app/main/default/objects/LicenseClassification__c/fields/NumberofHours2__c.field-meta.xml
<CustomField>
    <fullName>NumberofHours2__c</fullName>
    <formula>Case(ClassificationName__c,

&quot;NAIL&quot;, &quot;A national exam-equivalent to 350 hours&quot;,
&quot;COSM&quot;, &quot;A national exam-equivalent to 1800 hours&quot;,
&quot;HAIR&quot;, &quot;1250 training hours required&quot;,
&quot;ESTN&quot;, &quot;A national exam-equivalent to 600 hours&quot;,
&quot;ALL&quot;, &quot;A national exam-equivalent to 1800 hours&quot;,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours</label>
    <type>Text</type>
</CustomField>