force-app/main/default/objects/LicenseClassification__c/fields/NumberofHours__c.field-meta.xml
<CustomField>
    <fullName>NumberofHours__c</fullName>
    <description>PacPoint-DN11232020 - Created for PVL Sprint 7 Phase 1</description>
    <inlineHelpText>Include the text &quot;Hours&quot; after the number of hours.</inlineHelpText>
    <label>Number of Hours (Include text &quot;Hours&quot;)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>