force-app/main/default/objects/LicenseClassification__c/fields/RestrictedClass__c.field-meta.xml
<CustomField>
    <fullName>RestrictedClass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT041020 - Created for PVL phase 1</description>
    <label>Restricted Class</label>
    <type>Checkbox</type>
</CustomField>