force-app/main/default/objects/LicenseClassification__c/fields/RestrictedClassRenewalForm__c.field-meta.xml
<CustomField>
    <fullName>RestrictedClassRenewalForm__c</fullName>
    <formula>IF(
 RestrictedClass__c = true, 
&quot;Yes&quot;, 
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restricted Class Renewal Form</label>
    <type>Text</type>
</CustomField>