force-app/main/default/objects/LicenseClassification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - Current, Valid &amp; In Good Standing</fullName>
                <default>true</default>
                <label>C - Current, Valid &amp; In Good Standing</label>
            </value>
            <value>
                <fullName>I - Class No Longer Active (No RME/Firm, No EMPR)</fullName>
            </value>
            <value>
                <fullName>F - Class No Longer Active (License Forfeited)</fullName>
            </value>
            <value>
                <fullName>D - Class No Longer Active (License Delinquent)</fullName>
            </value>
            <value>
                <fullName>RI - RESTRICTED INACTIVE</fullName>
            </value>
            <value>
                <fullName>Z - CLASS NO LONGER ACTIVE (DISCIPLINARY ACTION TAKEN)</fullName>
            </value>
            <value>
                <fullName>E - PRACTICE SPECIALTY AMENDED BY BOARD OF NURSING</fullName>
            </value>
            <value>
                <fullName>LP - LICENSE REPEALED</fullName>
            </value>
            <value>
                <fullName>B - CLASS DENIED BY BOARD</fullName>
            </value>
            <value>
                <fullName>CW - CLASS WITHDRAWN BY APPLICANT</fullName>
            </value>
            <value>
                <fullName>H - CLASS DEFERRED BY BOARD</fullName>
            </value>
            <value>
                <fullName>NE - NO EXAM REQUIRED--CLASS TO BE LICENSED</fullName>
            </value>
            <value>
                <fullName>O - CLASS CODE OBSOLETE OR REDESCRIBED.</fullName>
            </value>
            <value>
                <fullName>P - PASSED EXAM--CLASS TO BE LICENSED</fullName>
            </value>
            <value>
                <fullName>T - CLASS NO LONGER ACTIVE (LICENSE TERMINATED)</fullName>
            </value>
            <value>
                <fullName>TD - CLASS NO LONGER ACTIVE (LICENSEE DECEASED)</fullName>
            </value>
            <value>
                <fullName>U - CLASS NO LONGER NEEDED DUE TO UPGRADE TO HIGHER CLASS</fullName>
            </value>
            <value>
                <fullName>W - AWAITING APPROVAL/EXAM</fullName>
            </value>
            <value>
                <fullName>X - INACTIVATION BY CHOICE</fullName>
            </value>
            <value>
                <fullName>Y - CLASS NO LONGER USED-BOARD APPROVED</fullName>
            </value>
            <value>
                <fullName>NX - NO PRESCRIPTIVE AUTHORITY ON THIS CLASS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>